--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,14 @@ body{
 .username{
 	padding: 0 10px;
 }
+.main-body{
+	display: flex;
+}
+.body-table-loan{
+	margin-top: 40px;
+	width:100%;
+	margin-left: 20px;
+}
 .username>img{
 	object-fit: contain;
 	height: 30px;
@@ -70,4 +78,57 @@ body{
 }
 .sidebar-item-icon{
 	padding-right:20px ;
+}
+table{
+    color: #2e2e2e;
+    padding: 10px;
+    width: 100%;
+}
+table th,td{
+    padding: 15px;
+    text-align: left;
+    color: white;
+}
+table th{
+    color: deepskyblue;
+}
+table tbody,tr{
+    background-color: #1c223b;
+}
+table tbody,tr:hover{
+    background-color: #151b31;
+    box-shadow: 0 3px 5px rgba(0, 0,0,0.2);
+}
+table tbody tr td:first-of-type{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+table tbody tr td:last-of-type{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: center;
+}
+.delete {
+    background: none;
+    border: 0;
+    border-radius: 2px;
+    color: #909090;
+    font-size: 16px;
+    padding: 5px 10px;
+    opacity: 0;
+}
+table tbody tr :hover .delete{
+    opacity: 1;
+}
+@media (max-width: 768px) {
+    .container{
+        padding: 20px;
+    }
+    table tbody tr .delete{
+        opacity: 1;
+    }
+    table th:nth-of-type(3),
+    table td:nth-of-type(3){
+        display: none;
+    }
 }
